--- a/Readme
+++ b/Readme
@@ -2,7 +2,8 @@
 * SpanishRoberta file contains Spanish Roberta model results.
 * Bangla(multilingual) file have results of bangla dataset using huggingface multilingual model.
 * llama2(multilingual)arabic and korean datasets results(preprocessing using generative ai and multilingual model for training)
-* llama2(multilingual)bangla,japaneese,spanish results( same as above)
+* llama2(multilingual)bangla,japaneese results( same as above)
+* llama2(multilingual)spanish results( same as above)
 Total =11+5=16.
 results as below:
 Datasets	      Model_Used	      Accuracy	precision	Recall	F1 score
