--- a/llama2(XLMROBERTA)_arabic.ipynb
+++ b/llama2(XLMROBERTA)_arabic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOm19aMbMcoTpmR4jFBgngs",
+      "authorship_tag": "ABX9TyPiu38jwYgRS9DZn/Zmz2RG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -730,6 +730,7 @@
         "from tqdm import tqdm\n",
         "from google.colab import files\n",
         "import torch.nn.functional as F\n",
+        "from transformers import AutoModelForSequenceClassification\n",
         "\n",
         "# Load the Llama-2 tokenizer with authentication\n",
         "model_name = \"meta-llama/Llama-2-7b-hf\"\n",
@@ -902,7 +903,7 @@
         "id": "_VY4Ur9FH_Rw",
         "outputId": "50122ee0-beae-4635-972d-27c706833904"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1389,7 +1390,7 @@
         "id": "g4Zk0syH_0yA",
         "outputId": "62511b79-c446-404e-ffef-1ad3be5cd83f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
