--- a/Readme
+++ b/Readme
@@ -25,4 +25,6 @@ LLAMA2 PREPROCESSING AND USE MULTILINGUAL BERT MODEL
 13.Bangla Dataset	Multi-lingual BERT	0.774259448	0.780243061	0.774259448	0.771513741
 14.Japaneese Dataset	Multi-lingual BERT	0.988	0.988288	0.988	0.987998272
 14.Korean Dataset	Multi-lingual BERT	0.964	0.965568	0.964	0.963971754
-16.Spanish Dataset	Multi-lingual BERT 0.913076557299096 0.913741848494714 0.913076557299096 0.913005724789823				
+16.Spanish Dataset	Multi-lingual BERT 0.913076557 0.91374184 0.91307655 0.9130057		
+17.Arabic Dataset	XLM ROBERTA	0.9676	0.96774112	0.9676	0.967597714
+
