--- a/Readme
+++ b/Readme
@@ -30,4 +30,7 @@ LLAMA2 PREPROCESSING AND USE MULTILINGUAL BERT MODEL
 14.Korean Dataset	Multi-lingual BERT	0.964	0.965568	0.964	0.963971754
 16.Spanish Dataset	Multi-lingual BERT 0.913076557 0.91374184 0.91307655 0.9130057		
 17.Arabic Dataset	XLM ROBERTA	0.9676	0.96774112	0.9676	0.967597714
-
+18.Bangla Dataset	XLM ROBERTA	0.748723187	0.963863342	0.748723187	0.660364646
+19.Japaneese Dataset	XLM ROBERTA	0.984	0.984512	0.984	0.983995903
+20.Korean Dataset	XLM ROBERTA	0.976	0.977152	0.976	0.975986168
+21.
