--- a/Readme
+++ b/Readme
@@ -6,7 +6,7 @@
 * llama2(multilingual)spanish results( same as above)---abcd5(bvcxz20235@gmail.com)
 * llama2(XLMROBERTA)_arabic results(llama2,xlmroberta) --- gfg882004@gmail.com
 * llama2(XLMROBERTA)-korean,japaneese results(same) --- abcd3(bvcxz20233@gmail.com)
-* llama2(XLMROBERTA)-bangla results(same) --- abcd2(bvcxz20232@gmail.com)
+* llama2(XLMROBERTA)-bangla,spanish results(same) --- abcd2(bvcxz20232@gmail.com)
 Total =11+5=16.
 results as below:
 Datasets	      Model_Used	      Accuracy	precision	Recall	F1 score
@@ -33,4 +33,4 @@ LLAMA2 PREPROCESSING AND USE MULTILINGUAL BERT MODEL
 18.Bangla Dataset	XLM ROBERTA	0.748723187	0.963863342	0.748723187	0.660364646
 19.Japaneese Dataset	XLM ROBERTA	0.984	0.984512	0.984	0.983995903
 20.Korean Dataset	XLM ROBERTA	0.976	0.977152	0.976	0.975986168
-21.
+21.Spanish Dataset	XLM ROBERTA	0.891678554	0.897406137	0.891678554	0.891209735
